--- a/RememberMe/app/src/main/res/layout/fragment_edit_word.xml
+++ b/RememberMe/app/src/main/res/layout/fragment_edit_word.xml
@@ -21,7 +21,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/cancelAddWordButton"
+                android:id="@+id/cancelButton"
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:layout_weight="1"
@@ -29,15 +29,16 @@
                 />
 
             <Button
-                android:id="@+id/translateAddWordButton"
+                android:id="@+id/translateButton"
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:layout_weight="1"
+                android:visibility="invisible"
                 android:text="@string/translate"
                 />
 
             <Button
-                android:id="@+id/saveAddWordButton"
+                android:id="@+id/saveButton"
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:layout_weight="1"
