--- a/RememberMe/app/src/main/res/layout-sw600dp/content_main.xml
+++ b/RememberMe/app/src/main/res/layout-sw600dp/content_main.xml
@@ -20,7 +20,13 @@
               app:layout_behavior="@string/appbar_scrolling_view_behavior"
               tools:layout="@layout/fragment_main" />
 
-    <include layout="@layout/content_detail" />
+    <FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/detail_container"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        />
 
 </LinearLayout>
 
