--- a/RememberMe/app/src/main/res/layout/activity_word_list.xml
+++ b/RememberMe/app/src/main/res/layout/activity_word_list.xml
@@ -10,5 +10,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <include layout="@layout/content_word_list" />
+    <include layout="@layout/content_detail" />
 </LinearLayout>
